# Platfomer

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md
src/: Death.mp4.m4a  Grass.mp4.m4a  Jump.mp4.m4a  Kill.mp4.m4a  Landing.mp4.m4a  Parkour.cpp  Score.mp4.m4a  Walk.mp4.m4a  build_and_run.sh
